# lstm-translator

./: .gitignore  README.md  README_hub.md  pyproject.toml
scripts/: continue_training.py  hub.py  inference.py  train.py  translate.py  upload_to_hf.py
src/: config.py
src/translator/: config.py  lstm.py
src/translator/data/: __init__.py  dataset.py  download.py  preprocesing.py  tokenizer.py
src/translator/models/: __init__.py  attention.py  decoder.py  encoder.py  lstm.py  seq2seq.py
src/translator/training/: __init__.py  metrics.py  trainer.py
tests/: test_attention.py  test_lstm.py  test_overfit.py  test_seq2seq.py
