[project]
name = "translator"
version = "0.1.0"
description = "Simple encoder-decoder + attention translator using LSTMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "sentencepiece",
    "sacrebleu",
    "tensorboard",
    "tqdm",
    "rich",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/translator"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
xformers = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
